--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 [
   {
-    "name" : "Badang Backup",
-    "link" : "",
-    "image" : "",
-    "filename" : ".zip"
+    "name" : "Badang Zodiac",
+    "link" : "https://github.com/pinyapple1029/badangfiles/raw/master/Badang_Zodiac.zip",
+    "image" : "https://github.com/pinyapple1029/badangfiles/raw/master/badang_special.jpg",
+    "filename" : "Badang_Zodiac.zip"
   }
   ]
